--- a/idex.html
+++ b/idex.html
@@ -6,6 +6,11 @@
     <title>CSS Loading Animation/title>
 </head>
 <body>
-    
+    <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <h2>loading</h2>
+    </div>
 </body>
 </html>
