--- a/idex.html
+++ b/idex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Loading Animation/title>
+    <title>CSS Loading Animation</title>
         <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
         <span></span>
         <span></span>
         <span></span>
-        <h2>loading</h2>
+        <h2>loading....</h2>
     </div>
 </body>
 </html>
